--- a/bin/application/view/SecurityList.fxml
+++ b/bin/application/view/SecurityList.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -30,21 +31,33 @@
             </ButtonBar>
          </bottom>
          <left>
-            <GridPane maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="700.0" BorderPane.alignment="CENTER">
+            <GridPane gridLinesVisible="true" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="700.0" BorderPane.alignment="CENTER">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="344.8185729980469" minWidth="10.0" prefWidth="221.5009765625" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="478.4990234375" minWidth="10.0" prefWidth="478.4990234375" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="157.85487365722656" minHeight="10.0" prefHeight="20.02930450439453" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="304.00697326660156" minHeight="10.0" prefHeight="212.2708740234375" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="240.11581420898438" minHeight="10.0" prefHeight="186.2291259765625" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Name" />
-                  <TextField fx:id="securityListNameField" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" />
-                  <Label text="Ingress rules" GridPane.rowIndex="1" />
-                  <Label text="Egress rules" GridPane.rowIndex="2" />
+                  <Label text="Name">
+                     <GridPane.margin>
+                        <Insets left="35.0" />
+                     </GridPane.margin></Label>
+                  <TextField fx:id="securityListNameField" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets left="15.0" right="15.0" />
+                     </GridPane.margin></TextField>
+                  <Label text="Ingress rules" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="35.0" />
+                     </GridPane.margin></Label>
+                  <Label text="Egress rules" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets left="35.0" />
+                     </GridPane.margin></Label>
                   <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -52,16 +65,82 @@
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Source CIDR" />
-                        <Label text="IP Protocol" GridPane.rowIndex="1" />
-                        <TextField GridPane.columnIndex="1" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <ChoiceBox fx:id="ipProtocolIngressChoice" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Button mnemonicParsing="false" text="Add ingress rule" GridPane.rowIndex="2" />
+                      <Label text="IP Protocol">
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin>
+                      </Label>
+                        
+                      <ChoiceBox fx:id="ipProtocolIngressChoice" prefWidth="150.0" GridPane.columnIndex="1">
+                         <GridPane.margin>
+                            <Insets left="25.0" />
+                         </GridPane.margin>
+                      </ChoiceBox>
+                        
+                        <Label text="Source CIDR" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <TextField fx:id="sourceCidrIngressField" GridPane.columnIndex="1" GridPane.rowIndex="1">
+	                        <GridPane.margin>
+	                           <Insets left="25.0" right="25.0" />
+	                        </GridPane.margin>
+                        </TextField>
+                       
+                        <Label text="Stateless" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <ChoiceBox fx:id="statelessIngressChoice" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets left="25.0" />
+                           </GridPane.margin>
+                        </ChoiceBox>
+                        
+                        <Label text="Port range options" GridPane.rowIndex="3">
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin>
+                        </Label>
+                        
+                        <Label text="Min" GridPane.rowIndex="4">
+                           <GridPane.margin>
+                              <Insets left="30.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Label text="Max" GridPane.rowIndex="5">
+                           <GridPane.margin>
+                              <Insets left="30.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <TextField fx:id="minRangeIngressField" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <GridPane.margin>
+                              <Insets left="25.0" right="25.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="maxRangeIngressField" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                           <GridPane.margin>
+                              <Insets left="25.0" right="25.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        
+                        <Button mnemonicParsing="false" onAction="#addIngressRuleClicked" text="Add ingress rule" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                           <GridPane.margin>
+                              <Insets bottom="6.0" left="65.0" top="3.0" />
+                           </GridPane.margin>
+                        </Button>
+                        
+                        
                      </children>
                   </GridPane>
                   <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -70,17 +149,83 @@
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Source CIDR" />
-                        <Label text="IP Protocol" GridPane.rowIndex="1" />
-                        <TextField GridPane.columnIndex="1" />
-                        <ChoiceBox fx:id="ipProtocolEgressChoice" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Button fx:id="egressButton" mnemonicParsing="false" text="Add egress rule" GridPane.rowIndex="3" />
+                     
+                     	<Label text="IP Protocol">
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin>
+                    		</Label>
+                        
+                        <ChoiceBox fx:id="ipProtocolEgressChoice" prefWidth="150.0" GridPane.columnIndex="1">
+                           <GridPane.margin>
+                              <Insets left="25.0" />
+                           </GridPane.margin>
+                        </ChoiceBox>
+                        
+                        <Label text="Source CIDR" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <TextField fx:id="destinationCidrEgressField" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="25.0" right="25.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        
+                        <Label text="Stateless" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <ChoiceBox fx:id="statelessEgressChoice" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets left="25.0" />
+                           </GridPane.margin>
+                        </ChoiceBox>
+                        
+                        <Label text="Port range options" GridPane.rowIndex="3">
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin>
+                        </Label>
+                        
+                        <Label text="Min" GridPane.rowIndex="4">
+                           <GridPane.margin>
+                              <Insets left="30.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Label text="Max" GridPane.rowIndex="5">
+                           <GridPane.margin>
+                              <Insets left="30.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <TextField fx:id="minRangeEgressField" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <GridPane.margin>
+                              <Insets left="25.0" right="25.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="maxRangeEgressField" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                           <GridPane.margin>
+                              <Insets left="25.0" right="25.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        
+                        <Button alignment="CENTER" mnemonicParsing="false" onAction="#addEgressRuleClicked" text="Add egress rule" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                           <GridPane.margin>
+                              <Insets bottom="6.0" left="65.0" top="3.0" />
+                           </GridPane.margin></Button>
+                        
+                        
                      </children>
                   </GridPane>
                </children>
