--- a/src/application/view/Final.fxml
+++ b/src/application/view/Final.fxml
@@ -14,7 +14,7 @@
    <children>
       <BorderPane layoutX="-171.0" layoutY="-132.0" prefHeight="459.0" prefWidth="598.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
          <top>
-            <Label text="Your cluster have been created !" BorderPane.alignment="CENTER">
+            <Label text="Your infrastructure config file is generated" BorderPane.alignment="CENTER">
                <font>
                   <Font size="18.0" />
                </font>
