--- a/src/application/view/Final.fxml
+++ b/src/application/view/Final.fxml
@@ -27,6 +27,7 @@
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -34,16 +35,18 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="VCN" />
-                  <Label text="Number of subnets" GridPane.rowIndex="1" />
-                  <Label text="Number of security lists" GridPane.rowIndex="2" />
-                  <Label text="Number of compute instances" GridPane.rowIndex="3" />
-                  <Label text="Number of Block Volumes" GridPane.rowIndex="4" />
-                  <Label fx:id="vcnName" text="Label" GridPane.columnIndex="1" />
-                  <Label fx:id="nbSubnets" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label fx:id="nbSecLists" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Label fx:id="nbInstances" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <Label fx:id="nbBlockVolumes" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label text="VCN" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                  <Label text="Number of subnets" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                  <Label text="Number of security lists" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                  <Label text="Number of compute instances" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                  <Label text="Number of Block Volumes" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                  <Label fx:id="vcnName" text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                  <Label fx:id="nbSubnets" text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                  <Label fx:id="nbSecLists" text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                  <Label fx:id="nbInstances" text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                  <Label fx:id="nbBlockVolumes" text="Label" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                  <Label text="Resource" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <Label text="Quantity" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
          </center>
